--- a/todo/templates/todo/login.html
+++ b/todo/templates/todo/login.html
@@ -2,19 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sign_Up</title>
+    <title>Login</title>
 </head>
 <body>
 {% extends 'todo/base.html' %}
 
 {% block content %}
-<h1>Sign Up</h1>
+<h1>Login</h1>
 <h2>{{ error }}</h2>
 <form method="POST">
-    {% csrf_token %}
+        {% csrf_token %}
 {{ form.as_p }}
-
-    <button type="submit">Sign Up</button>
+<button type="submit">Login</button>
 </form>
 {% endblock %}
 </body>
