Created TodoForm and added currenttodos page with all objects

--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -9,7 +9,15 @@
 
 {% block content %}
 Current
+<ul>
+    {% for todo in todos %}
+    <li>{{ todo.title }}
+        <br>
+        {{ todo.description }}
+        {{ todo. }}
+    </li>
+    {% endfor %}
+</ul>
 {% endblock %}
-
 </body>
 </html>
