--- a/todo/templates/todo/createtodo.html
+++ b/todo/templates/todo/createtodo.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create</title>
 </head>
 <body>
+{% extends 'todo/base.html' %}
 
+{% block content %}
+<h1>Create</h1>
+<h2>{{ error }}</h2>
+<form method="POST">
+        {% csrf_token %}
+{{ form.as_p }}
+<button type="submit">Create</button>
+</form>
+<h3>{{ todo.important }}</h3>
+{% endblock %}
 </body>
 </html>
