Created detailtodo.html with the ability to edit todo title and description

--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -11,10 +11,12 @@
 Current
 <ul>
     {% for todo in todos %}
-    <li>{{ todo.title }}
-        <br>
-        {{ todo.description }}
-        {{ todo. }}
+    <li>
+        <a href="{% url 'viewtodo' todo.id %}">
+        {% if todo.important %}<b>{% endif %}{{ todo.title }}{% if todo.important %}</b>{% endif %}
+        {% if todo.description %} - {{ todo.description }} {% endif %}
+            {% if todo.created %} - {{ todo.created }} {% endif %}
+
     </li>
     {% endfor %}
 </ul>
