--- a/todo/templates/todo/detailtodo.html
+++ b/todo/templates/todo/detailtodo.html
@@ -16,6 +16,11 @@
 {{ form.as_p }}
     <button type="submit">Save</button>
 </form>
+
+<form method="POST" action="{% url 'completetodo' todo.id %}">
+    {% csrf_token %}
+    <button type="submit">Complete</button>
+</form>
 {% endblock %}
 </body>
 </html>
