Added func Delete and @login_required in views.py

--- a/todo/templates/todo/detailtodo.html
+++ b/todo/templates/todo/detailtodo.html
@@ -21,6 +21,12 @@
     {% csrf_token %}
     <button type="submit">Complete</button>
 </form>
+<form method="POST" action="{% url 'deletetodo' todo.id %}">
+    {% csrf_token %}
+    <button type="submit">Delete</button>
+</form>
+
+
 {% endblock %}
 </body>
 </html>
