--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -1,28 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <link rel="icon" type="image/png"  href="{% static 'todo/logo.png' %}">
+    <title>Todo</title>
 </head>
 <body>
-{% if user.is_authenticated %}
-Logged In as {{ user.username }}
-<a href="{% url 'createtodo' %}">Create</a>
-<a href="{% url 'currenttodos' %}">Current</a>
-<a href="{% url 'completedtodos' %}">Completed</a>
 
-<form action="{% url 'logoutuser' %}" method="POST">
-{% csrf_token %}
-<button type="submit">Logout</button>
-</form>
-{% else %}
 
-<a href="{% url 'sign_up' %}">Sign Up</a>
-<a href="{% url 'loginuser' %}">Login</a>
+<nav class="navbar navbar-expand-md navbar-light bg-warning">
+<div class="container">
+    <a class="navbar-brand" href="{% url 'home' %}">
+         <img src="{% static 'todo/logo.png' %}" width="35" height="40" class="d-inline-block align-top">
+        <span>Todo Wow!</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+    {% if user.is_authenticated %}
+        <ul class="navbar-nav mr-auto">
 
-{% endif %}
-<br>
-<br>
+                <li class="nav-item {{ current }}">
+                    <a class="nav-link" href="{% url 'currenttodos' %}">Current</a>
+                </li>
+                <li class="nav-item {{ completed }}">
+                    <a class="nav-link" href="{% url 'completedtodos' %}">Completed</a>
+                </li>
+                <li class="nav-item {{ create }}">
+                    <a class="nav-link" href="{% url 'createtodo' %}">Create</a>
+                </li>
+
+        </ul>
+    {% endif %}
+    <ul class="navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a href="#" onclick="$('#signOutBtn').click()" class="nav-link">Logout</a>
+                    <form style='display: none;' method="POST" action="{% url 'logoutuser' %}">
+                        {% csrf_token %}
+                        <button id="signOutBtn" type="submit">Logout</button>
+                    </form>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'sign_up' %}">Sign Up</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'loginuser' %}">Login</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+</div>
+</nav>
+
+<div class="container">
 {% block content %}{% endblock %}
-</body>
+</div>
+
 </html>
